# venom_monkey

./: .editorconfig  .env  .gitignore  .mdformat.toml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Cross.toml  Dockerfile  Dockerfile.agent  Makefile  README.md
.cursor/rules/: agent-patterns.mdc  client-patterns.mdc  common-patterns.mdc  project-structure.mdc  rust-conventions.mdc  server-patterns.mdc
.kiro/specs/venommonkey-modernization/: design.md  requirements.md  tasks.md
.kiro/steering/: agent-patterns.md  client-patterns.md  common-patterns.md  product.md  project-structure.md  rust-conventions.md  server-patterns.md  structure.md  tech.md
agent/: Cargo.toml
agent/src/: config.rs  consts.rs  init.rs  main.rs
agent/src/install/: macos.rs
client/: Cargo.toml
client/src/: config.rs  main.rs
client/src/cli/: agents.rs  exec.rs  jobs.rs  mod.rs
common/: Cargo.toml
common/src/: api.rs
server/: Cargo.toml
server/db/migrations/: 001_init.sql  20220128212318_add_machine_id.sql  20220128222949_add_hostname.sql
server/src/: config.rs  db.rs  entities.rs  main.rs
server/src/api/: mod.rs
server/src/api/routes/: mod.rs
server/src/repository/: agents.rs  jobs.rs
server/src/service/: agents.rs  jobs.rs
server2/: Cargo.toml
server2/migrations/2022-02-01-112434_create_agents/: up.sql
server2/migrations/2022-02-01-113052_create_jobs/: up.sql
server2/migrations/2022-02-02-172408_add_users/: up.sql
server2/src/: handlers.rs  main.rs  models.rs  schema.rs
