[package]
name = "agent"
version = "0.1.0"
edition = "2018"

[dependencies]
common = { path = "../common" }

ureq = { version = "2.1", features = ["tls", "json"] }
log = "0.4"
uuid = { version = "0.8", features = ["serde", "v4"] }
dirs = "4.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
rand = "0.7"
ed25519-dalek = "1.0"
x25519-dalek = "1.0"
base64 = "0.13"
chacha20poly1305 = "0.8"
blake2 = "0.9"
zeroize = "1.3"
single-instance = "0.3"
load-dotenv = "0.1"

#[cfg(debug_assertions)]
simplelog = "0.11"

[target.'cfg(windows)'.dependencies]
winreg = "0.10"
