[package]
name = "client"
version = "0.1.0"
edition = "2018"
description = "A distributed multiplatform beacon to emulate threat actor capabilities"


[dependencies]
common = { path = "../common" }

clap = { version = "^3.0", features = ["derive", "cargo", "env", "wrap_help"] }
anyhow = "^1.0"
thiserror = "^1.0"
base64 = "^0.13"
reqwest = { version = "^0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
uuid = { version = "^0.8", features = ["serde", "v4"] }
comfy-table = "^5.0"
ed25519-dalek = "^1.0"
rand = "^0.7"
x25519-dalek = "^1.0"
chacha20poly1305 = "^0.8"
blake2 = "^0.9"
serde_json = "^1.0"
zeroize = "^1.3"
load-dotenv = "^0.1"
