[package]
name = "server"
version = "0.1.0"
edition = "2018"


[dependencies]
common = { path = "../common" }

uuid = { version = "^0.8", features = ["v4", "v5"] }
chrono = { version = "^0.4" }
sqlx = { version = "^0.5", features = [
    "runtime-tokio-rustls",
    "uuid",
    "postgres",
    "migrate",
    "chrono",
    "time",
] }

warp = { version = "^0.3", default-features = false }
tokio = { version = "^1.16", features = ["full"] }
env_logger = "^0.9"
anyhow = "^1.0"
dotenv = "^0.15"
thiserror = "^1.0"
serde = { version = "^1.0" }
log = "^0.4"
ed25519-dalek = "^1.0"
base64 = "^0.13"
load-dotenv = "^0.1"
