[package]
name = "server2"
version = "0.1.0"
edition = "2018"


[dependencies]
common = { path = "../common" }

uuid = { version = "^0.8", features = ["v4", "v5"] }
chrono = { version = "^0.4", features = ["serde"] }
diesel = { version = "^1.4", features = [
    "postgres",
    "chrono",
    "uuidv07",
    "r2d2",
    "numeric",
] }
tokio = { version = "^1.16", features = ["full"] }
env_logger = "^0.9"
anyhow = "^1.0"
dotenv = "^0.15"
thiserror = "^1.0"
serde = { version = "^1.0" }
log = "^0.4"
ed25519-dalek = "^1.0"
base64 = "^0.13"
load-dotenv = "^0.1"
r2d2-diesel = "^1.0"
r2d2 = "^0.8"
serde_json = "^1.0"
serde_derive = "^1.0"

actix-web = "^2.0"
actix-web-httpauth = { git = "https://github.com/actix/actix-web-httpauth" }
derive_more = "^0.99"
futures = "^0.3"
actix-service = "^1.0"
alcoholic_jwt = "^1.0"
reqwest = "^0.9"
actix-rt = "^1.0"
